Kleopatra uses gpgconf for configuring gpg. gpg uses the keyserver option from gpg.conf if it is set, but gpg 2.3 does no longer make this option available via gpgconf. This makes it impossible for Kleopatra (or any other program relying on gpgconf for configuring the GnuPG suite) to change the OpenPGP keyserver if the keyserver option is set in gpg.conf.
Description
Description
Revisions and Commits
Revisions and Commits
Status | Assigned | Task | ||
---|---|---|---|---|
Resolved | ikloecker | T5461 Kleopatra: Does not change OpenPGP keyserver configured in gpg.conf | ||
Resolved | • werner | T5462 gpgconf: Make gpg/keyserver option available again |